marsRoverPhoto endpoint added and logging enhanced
