# routes/api.php
@@ -10,3 +10,4 @@ Route::get('/user', function (Request $request) {
 
 
 Route::get('/nasa/picture-of-the-day', [NasaController::class, 'showPictureOfTheDay']);
+Route::get('/nasa/mars-rover-photos', [NasaController::class, 'showMarsRoverPhotos']);
